--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
   <groupId>asn</groupId>
   <artifactId>asn</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -33,5 +39,13 @@
   		<version>1.16.12</version>
   		<scope>provided</scope>
   	</dependency>
+      <dependency>
+      <groupId>com.github.petitparser.java-petitparser</groupId>
+      <artifactId>petitparser-core</artifactId>
+      <version>2.0.3</version>
+    </dependency>
   </dependencies>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
