Non-serialized iterator test

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>asn</groupId>
-  <artifactId>asn</artifactId>
+  <groupId>ekg</groupId>
   <version>0.0.1-SNAPSHOT</version>
   <repositories>
     <repository>
@@ -50,4 +49,5 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <artifactId>ekg</artifactId>
 </project>
